@@ -1,5 +1,7 @@
 package edu.ntnu.idi.idatt.millions.view.components;
 
+import java.math.BigDecimal;
+import java.util.List;
 import javafx.geometry.Insets;
 import javafx.scene.chart.LineChart;
 import javafx.scene.chart.NumberAxis;
@@ -8,36 +10,29 @@ import javafx.scene.control.Label;
 import javafx.scene.layout.Priority;
 import javafx.scene.layout.VBox;
 
-import java.math.BigDecimal;
-import java.util.List;
-
 /**
- * <p>
  * UI component that renders a line chart for a stock's price history.
- * </p>
  *
- * <p>
- * The component displays a title, subtitle, and a line chart that can be
- * populated with weekly price data.
- * </p>
+ * <p>The component displays a title, subtitle, and a line chart that can be populated with weekly
+ * price data.
  */
 public class StockChartComponent extends VBox {
 
   private final Label titleLabel;
   private final Label subtitleLabel;
   private final LineChart<Number, Number> lineChart;
-  private final NumberAxis xAxis;
-  private final NumberAxis yAxis;
+  private final NumberAxis horizontalAxis;
+  private final NumberAxis verticalAxis;
 
   /**
-   * <p>Constructs the chart component with initial symbol and company labels.</p>
+   * Constructs the chart component with initial symbol and company labels.
    *
-   * @param symbol  the stock symbol to show in the title
+   * @param symbol the stock symbol to show in the title
    * @param company the company name to show in the subtitle
    */
   public StockChartComponent(String symbol, String company) {
     getStyleClass().add("stat-card");
-    setPadding(new Insets(5,10,5,10));
+    setPadding(new Insets(5, 10, 5, 10));
     setSpacing(5);
 
     titleLabel = new Label(symbol);
@@ -46,22 +41,23 @@ public class StockChartComponent extends VBox {
     subtitleLabel = new Label(company);
     subtitleLabel.getStyleClass().add("chart-subtitle");
 
-    xAxis = new NumberAxis();
-    xAxis.setLabel("Week");
-    xAxis.setTickLabelFormatter(new NumberAxis.DefaultFormatter(xAxis) {
-      @Override
-      public String toString(Number value) {
-        return String.valueOf(value.intValue());
-      }
-    });
-    xAxis.getStyleClass().add("chart-axis");
+    horizontalAxis = new NumberAxis();
+    horizontalAxis.setLabel("Week");
+    horizontalAxis.setTickLabelFormatter(
+        new NumberAxis.DefaultFormatter(horizontalAxis) {
+          @Override
+          public String toString(Number value) {
+            return String.valueOf(value.intValue());
+          }
+        });
+    horizontalAxis.getStyleClass().add("chart-axis");
 
-    yAxis = new NumberAxis();
-    yAxis.setLabel("Price ($)");
-    yAxis.getStyleClass().add("chart-axis");
-    yAxis.setForceZeroInRange(false);
+    verticalAxis = new NumberAxis();
+    verticalAxis.setLabel("Price ($)");
+    verticalAxis.getStyleClass().add("chart-axis");
+    verticalAxis.setForceZeroInRange(false);
 
-    lineChart = new LineChart<>(xAxis, yAxis);
+    lineChart = new LineChart<>(horizontalAxis, verticalAxis);
     lineChart.setCreateSymbols(false);
     lineChart.setLegendVisible(false);
     lineChart.setAnimated(false);
@@ -73,9 +69,9 @@ public class StockChartComponent extends VBox {
   }
 
   /**
-   * <p>Updates the symbol and company labels shown above the chart.</p>
+   * Updates the symbol and company labels shown above the chart.
    *
-   * @param symbol  the stock symbol to display
+   * @param symbol the stock symbol to display
    * @param company the company name to display
    */
   public void setStockInfo(String symbol, String company) {
@@ -84,9 +80,8 @@ public class StockChartComponent extends VBox {
   }
 
   /**
-   * <p>Replaces the chart data with the provided list of prices, labelling
-   * the x-axis from 1 to {@code prices.size()}. Used for charts (e.g. the
-   * portfolio value chart) whose data begins at week 1.</p>
+   * Replaces the chart data with the provided list of prices, labelling the x-axis from 1 to {@code
+   * prices.size()}. Used for charts (e.g. the portfolio value chart) whose data begins at week 1.
    *
    * @param prices list of prices ordered by week
    */
@@ -95,20 +90,21 @@ public class StockChartComponent extends VBox {
   }
 
   /**
-   * <p>Replaces the chart data with the provided list of prices and aligns
-   * the x-axis so that the last data point is labelled {@code lastWeek}.</p>
+   * Replaces the chart data with the provided list of prices and aligns the x-axis so that the last
+   * data point is labelled {@code lastWeek}.
    *
-   * <p>Pre-simulated history that predates week 1 is shown with negative week
-   * numbers (e.g. W-29, W-15, W0), letting players see price history before
-   * the game started.</p>
+   * <p>Pre-simulated history that predates week 1 is shown with negative week numbers (e.g. W-29,
+   * W-15, W0), letting players see price history before the game started.
    *
-   * @param prices   list of prices ordered by week, oldest first
+   * @param prices list of prices ordered by week, oldest first
    * @param lastWeek the game week corresponding to the last entry in {@code prices}
    */
   public void setData(List<BigDecimal> prices, int lastWeek) {
     lineChart.getData().clear();
 
-    if (prices == null || prices.isEmpty()) return;
+    if (prices == null || prices.isEmpty()) {
+      return;
+    }
 
     XYChart.Series<Number, Number> series = new XYChart.Series<>();
 
@@ -119,31 +115,21 @@ public class StockChartComponent extends VBox {
       series.getData().add(new XYChart.Data<>(week, prices.get(i).doubleValue()));
     }
 
-    xAxis.setAutoRanging(false);
-    xAxis.setLowerBound(firstWeek - 1);
-    xAxis.setUpperBound(lastWeek + 1);
-    xAxis.setTickUnit(Math.max(1, Math.ceil((lastWeek - firstWeek + 1) / 10.0)));
+    horizontalAxis.setAutoRanging(false);
+    horizontalAxis.setLowerBound(firstWeek - 1);
+    horizontalAxis.setUpperBound(lastWeek + 1);
+    horizontalAxis.setTickUnit(Math.max(1, Math.ceil((lastWeek - firstWeek + 1) / 10.0)));
 
     lineChart.getData().add(series);
 
-    boolean isPositive = n > 1 &&
-        prices.get(n - 1).compareTo(prices.get(0)) >= 0;
+    boolean isPositive = n > 1 && prices.get(n - 1).compareTo(prices.getFirst()) >= 0;
 
     lineChart.getStyleClass().removeAll("chart-positive", "chart-negative");
     lineChart.getStyleClass().add(isPositive ? "chart-positive" : "chart-negative");
   }
 
   /**
-   * <p>Clears the chart data and resets the labels.</p>
-   */
-  public void clear() {
-    lineChart.getData().clear();
-    titleLabel.setText("");
-    subtitleLabel.setText("");
-  }
-
-  /**
-   * <p>Sets the preferred height of the chart area.</p>
+   * Sets the preferred height of the chart area.
    *
    * @param height the preferred height in pixels
    */
@@ -152,16 +138,11 @@ public class StockChartComponent extends VBox {
   }
 
   /**
-   * <p>Updates the label text shown on the X axis.</p>
+   * Updates the label text shown on the Y axis.
    *
    * @param label the axis label
    */
-  public void setXAxisLabel(String label) { xAxis.setLabel(label); }
-
-  /**
-   * <p>Updates the label text shown on the Y axis.</p>
-   *
-   * @param label the axis label
-   */
-  public void setYAxisLabel(String label) { yAxis.setLabel(label); }
+  public void setYaxisLabel(String label) {
+    verticalAxis.setLabel(label);
+  }
 }
